Fix battle score bar flags not being visible

--- a/css/main.less
+++ b/css/main.less
@@ -451,11 +451,9 @@ ul, ol
   margin-left: @battle-score-mid-point-width / -2;
 }
 
-.battle-score-flag-wrapper
+.battle-score-flag
 {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
+  height: 100%;
   width: 46px;
 }
 
